Refactor `Gin` class: add held-out ω projections with consensus, enhance gap checks, streamline configuration, and improve overall robustness.